--- a/i18n/zh/docusaurus-plugin-content-docs/current/quick-view/fetch/export/dto.mdx
+++ b/i18n/zh/docusaurus-plugin-content-docs/current/quick-view/fetch/export/dto.mdx
@@ -681,7 +681,7 @@ class BookController(
 
     @GetMapping("/books")
     fun findBooksByName(
-            @RequestParam(required = false) name: String
+            @RequestParam(required = false) name: String?
     ): List<SimpleBookView> =
         bookRepository.findBooksByName(
             name,
