--- a/i18n/zh/docusaurus-plugin-content-docs/current/object/view/dto-language.mdx
+++ b/i18n/zh/docusaurus-plugin-content-docs/current/object/view/dto-language.mdx
@@ -622,7 +622,7 @@ OrderView {
 
 -   ❶ 为`prop1`和`prop2`添加前缀`oldSystem`，其中`^`表示起始位置
 
--   ❷ 为`prop3`和`prop4`添加后缀`ForNewSystem`，其中`$`表示起始位置
+-   ❷ 为`prop3`和`prop4`添加后缀`ForNewSystem`，其中`$`表示结尾位置
 
 生成的`RobotView`类如下
 
